# aosp-vndk-meson

./: README.md  aarch64-linux-android-ndk.txt  arm-linux-androideabi-ndk.txt  main.cpp  meson.build  x86_64-linux-android-ndk.txt
subprojects/: .gitignore  vndk.wrap
subprojects/packagefiles/vndk/: meson.build
